--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
+  "name": "nube-components",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "8.39.0",
     "eslint-config-custom": "workspace:*",
-    "prettier": "^2.5.1",
-    "turbo": "latest"
+    "prettier": "2.8.8",
+    "turbo": "1.9.3"
   },
-  "packageManager": "pnpm@7.15.0",
-  "name": "nube-components"
+  "packageManager": "pnpm@7.15.0"
 }
