--- a/apps/storybook-react/tsconfig.json
+++ b/apps/storybook-react/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/react-library.json",
+  "extends": "tsconfig/react-app.json",
   "include": ["src"],
   "exclude": ["dist", "build", "node_modules"]
 }
