🆕 NEW: Create empty react vite project

--- a/packages/ui-react/tsconfig.json
+++ b/packages/ui-react/tsconfig.json
@@ -1,5 +1,3 @@
 {
-  "extends": "tsconfig/react-library.json",
-  "include": ["src"],
-  "exclude": ["dist", "build", "node_modules"]
+  "extends": "tsconfig/react/react-library.json"
 }
