--- a/apps/storybook-react/package.json
+++ b/apps/storybook-react/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "main": "src/index.tsx",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint --ext .ts,.tsx ."
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tsconfig": "workspace:*",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "eslint-plugin-react": "7.32.2"
   }
 }
