--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-config-turbo": "1.9.3"
+    "eslint-config-turbo": "1.9.3",
+    "@typescript-eslint/eslint-plugin": "5.59.1",
+    "@typescript-eslint/parser": "5.59.1"
   },
   "publishConfig": {
     "access": "public"
