--- a/apps/storybook-react/package.json
+++ b/apps/storybook-react/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "storybook-react",
+  "name": "storybook-react-v",
+  "private": true,
   "version": "0.0.0",
-  "description": "",
-  "main": "src/index.tsx",
+  "type": "module",
   "scripts": {
-    "lint": "eslint --ext .ts,.tsx ."
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@vitejs/plugin-react-swc": "3.3.0",
     "eslint": "8.39.0",
-    "eslint-config-custom": "workspace:*",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tsconfig": "workspace:*",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.3.5",
     "typescript": "5.0.4",
-    "eslint-plugin-react": "7.32.2"
+    "vite": "4.3.3",
+    "tsconfig": "workspace:*",
+    "eslint-config-custom": "workspace:*",
+    "ui-react": "workspace:*"
   }
 }
