--- a/apps/storybook-react/tsconfig.json
+++ b/apps/storybook-react/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "tsconfig/react/react-app.json",
-  "include": ["src"],
+  "include": ["app/src"],
   "exclude": ["dist", "build", "node_modules"]
 }
