🆕 NEW: Add storybook with vite

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo build",
     "dev": "turbo dev",
+    "build": "turbo build",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "storybook": "turbo storybook"
   },
   "devDependencies": {
     "eslint": "8.39.0",
