--- a/apps/storybook-react/package.json
+++ b/apps/storybook-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storybook-react-v",
+  "name": "storybook-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,23 +7,35 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.0.7",
+    "@storybook/addon-interactions": "7.0.7",
+    "@storybook/addon-links": "7.0.7",
+    "@storybook/blocks": "7.0.7",
+    "@storybook/react": "7.0.7",
+    "@storybook/react-vite": "7.0.7",
+    "@storybook/testing-library": "0.1.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "@vitejs/plugin-react-swc": "3.3.0",
     "eslint": "8.39.0",
+    "eslint-config-custom": "workspace:*",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.3.5",
-    "typescript": "5.0.4",
-    "vite": "4.3.3",
+    "eslint-plugin-storybook": "0.6.11",
+    "prop-types": "15.8.1",
+    "storybook": "7.0.7",
     "tsconfig": "workspace:*",
-    "eslint-config-custom": "workspace:*",
-    "ui-react": "workspace:*"
+    "typescript": "5.0.4",
+    "ui-react": "workspace:*",
+    "vite": "4.3.3"
   }
 }
