--- a/packages/ui-react/tsconfig.json
+++ b/packages/ui-react/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "tsconfig/react/react-library.json"
+  "extends": "tsconfig/react/react-library.json",
+  "include": ["src"],
+  "compilerOptions": {
+    "baseUrl": "./src"
+  }
 }
