--- a/apps/storybook-react/package.json
+++ b/apps/storybook-react/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "storybook": "storybook dev -p 6006 -c ./storybook/config",
     "storybook:build": "storybook build -c ./storybook/config -o ./storybook/export"
   },
@@ -28,9 +28,6 @@
     "@vitejs/plugin-react-swc": "3.3.0",
     "eslint": "8.39.0",
     "eslint-config-custom": "workspace:*",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.3.5",
-    "eslint-plugin-storybook": "0.6.11",
     "prop-types": "15.8.1",
     "storybook": "7.0.7",
     "tsconfig": "workspace:*",
