--- a/apps/storybook-react/tsconfig.json
+++ b/apps/storybook-react/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "tsconfig/react/react-app.json",
   "include": ["app/src"],
   "compilerOptions": {
-    "baseUrl": "./"
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["app/src/*"]
+    }
   },
   "exclude": ["dist", "build", "node_modules"]
 }
