--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "eslint-config-prettier": "8.8.0",
-    "eslint-config-turbo": "1.9.3",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1"
-  },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.59.1",
+    "@typescript-eslint/parser": "5.59.1",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-config-turbo": "1.9.3",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-refresh": "0.3.5",
+    "eslint-plugin-storybook": "0.6.11"
   }
 }
