🚑 HOTFIX: fix all lint erros. Downside: Had to turn node-linker on

--- a/apps/storybook-react/tsconfig.json
+++ b/apps/storybook-react/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "tsconfig/react/react-app.json",
-  "include": ["app/src"],
+  "include": ["app/src", "storybook"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
