--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,10 +9,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
+    "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-turbo": "1.9.3",
     "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.3.5",
-    "eslint-plugin-storybook": "0.6.11"
+    "eslint-plugin-storybook": "0.6.11",
+    "prettier": "2.8.8",
+    "typescript": "5.0.4"
   }
 }
