--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -10,10 +10,8 @@
   "devDependencies": {
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "eslint": "8.39.0",
     "eslint-config-custom": "workspace:*",
     "react": "18.2.0",
-    "tsconfig": "workspace:*",
-    "typescript": "5.0.4"
+    "tsconfig": "workspace:*"
   }
 }
