👌 UPDATE: Update angula project with a cleaner look

--- a/packages/ui-react/tsconfig.json
+++ b/packages/ui-react/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "tsconfig/react/react-library.json",
   "include": ["src"],
   "compilerOptions": {
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
