--- a/apps/storybook-react/package.json
+++ b/apps/storybook-react/package.json
@@ -31,6 +31,7 @@
     "storybook": "7.0.7",
     "tsconfig": "workspace:*",
     "ui-react": "workspace:*",
-    "vite": "4.3.3"
+    "vite": "4.3.3",
+    "typescript": "5.0.4"
   }
 }
