--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.3.5",
     "eslint-plugin-storybook": "0.6.11",
-    "prettier": "2.8.8",
-    "typescript": "5.0.4"
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "prettier": "2.8.8"
   }
 }
