--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "18.2.1",
     "eslint-config-custom": "workspace:*",
     "react": "18.2.0",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "5.0.4"
   }
 }
