--- a/packages/tsconfig/react/react-app.json
+++ b/packages/tsconfig/react/react-app.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "React App",
-  "extends": "./react-library.json",
+  "extends": "./react-base.json",
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "moduleResolution": "bundler",
