--- a/packages/ui-angular/angular.json
+++ b/packages/ui-angular/angular.json
@@ -28,10 +28,27 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "tsConfig": "project/tsconfig.spec.json",
-            "polyfills": ["zone.js", "zone.js/testing"]
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "project/**/*.ts",
+              "project/**/*.html"
+            ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
