--- a/packages/ui-angular/package.json
+++ b/packages/ui-angular/package.json
@@ -1,14 +1,50 @@
 {
-  "name": "ui-angular-old",
+  "name": "ui-angular",
   "version": "0.0.0",
-  "main": "./src/...",
-  "types": "./src/...",
-  "license": "MIT",
   "scripts": {
-    "lint": "eslint ..."
+    "ng": "ng",
+    "start": "ng serve",
+    "dev": "ng build project --watch",
+    "build": "ng build project",
+    "watch": "ng build --watch --configuration development",
+    "lint": "ng lint",
+    "test": "ng test"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "15.2.8",
+    "@angular/common": "15.2.8",
+    "@angular/compiler": "15.2.8",
+    "@angular/core": "15.2.8",
+    "@angular/forms": "15.2.8",
+    "@angular/platform-browser": "15.2.8",
+    "@angular/platform-browser-dynamic": "15.2.8",
+    "@angular/router": "15.2.8",
+    "rxjs": "7.8.1",
+    "tslib": "2.5.0",
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "15.2.7",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "15.2.7",
+    "@angular/compiler-cli": "15.2.8",
+    "@types/jasmine": "4.3.1",
+    "@typescript-eslint/eslint-plugin": "5.59.1",
+    "@typescript-eslint/parser": "5.59.1",
     "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "jasmine-core": "4.6.0",
+    "karma": "6.4.2",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.0.0",
+    "ng-packagr": "15.2.2",
+    "tsconfig": "workspace:*",
+    "typescript": "4.9.5"
   }
 }
