--- a/packages/ui-angular/tsconfig.json
+++ b/packages/ui-angular/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "tsconfig/angular/angular-library.json",
-  "include": ["src"],
-  "compilerOptions": {
-    "baseUrl": "./src",
-    "outDir": "./dist/out-tsc"
-  }
+  "extends": "tsconfig/angular/angular-base.json"
 }
