--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,9 @@
       "cache": false,
       "persistent": true
     },
-    "lint": {},
+    "lint": {
+      "cache": true
+    },
     "storybook": {},
     "build-storybook": {}
   }
