🆕 NEW: Add new storybook project and fix path related tsconfig options

--- a/packages/ui-angular/project/tsconfig.lib.json
+++ b/packages/ui-angular/project/tsconfig.lib.json
@@ -1,3 +1,7 @@
 {
-  "extends": "tsconfig/angular/angular-library.json"
+  "extends": "tsconfig/angular/angular-library.json",
+  "compilerOptions": {
+    "outDir": "../out-tsc/lib"
+  },
+  "exclude": ["**/*.spec.ts"]
 }
