--- a/packages/ui-angular/tsconfig.json
+++ b/packages/ui-angular/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "tsconfig/angular/angular-base.json"
+  "extends": "tsconfig/angular/angular-base.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "./dist/out-tsc",
+    "paths": {
+      "project": ["dist/project"],
+      "@/*": ["project/src/lib/*"]
+    }
+  }
 }
