--- a/packages/ui-angular/project/tsconfig.spec.json
+++ b/packages/ui-angular/project/tsconfig.spec.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/angular/angular-library.spec.json",
+  "extends": "tsconfig/angular/angular-spec.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec"
   },
