--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
-    "turbo": "1.9.3"
+    "turbo": "1.9.3",
+    "eslint": "8.39.0",
+    "prettier": "2.8.8"
   },
   "packageManager": "pnpm@7.15.0"
 }
