--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,6 +7,11 @@
     "access": "public"
   },
   "devDependencies": {
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
     "eslint": "8.39.0",
@@ -14,9 +19,8 @@
     "eslint-config-turbo": "1.9.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.3.5",
+    "eslint-plugin-react-refresh": "0.4.0",
     "eslint-plugin-storybook": "0.6.11",
-    "@angular-eslint/eslint-plugin": "15.2.1",
     "prettier": "2.8.8"
   }
 }
