--- a/packages/ui-angular/package.json
+++ b/packages/ui-angular/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "dev": "ng build project --watch",
+    "dev": "pnpm watch",
     "build": "ng build project",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint",
@@ -26,16 +26,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.2.7",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "15.2.7",
     "@angular/compiler-cli": "15.2.8",
     "@types/jasmine": "4.3.1",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1",
     "eslint-config-custom": "workspace:*",
     "jasmine-core": "4.6.0",
     "karma": "6.4.2",
