--- a/apps/storybook-angular/tsconfig.json
+++ b/apps/storybook-angular/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "extends": "tsconfig/angular/angular-base.json",
-  "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "outDir": "./dist/out-tsc",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["app/*"]
     }
   }
 }
