--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
       "persistent": true
     },
     "build": {
-      "outputs": [],
+      "outputs": ["dist"],
       "dependsOn": ["build-storybook"]
     },
     "preview": {
