--- a/packages/ui-angular/package.json
+++ b/packages/ui-angular/package.json
@@ -1,43 +1,36 @@
 {
   "name": "ui-angular",
   "version": "0.0.0",
+  "main": "dist/esm2020/public-api.mjs",
+  "module": "dist/esm2020/public-api.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "dev": "pnpm watch",
-    "build": "ng build project",
-    "watch": "ng build --watch --configuration development",
-    "lint": "ng lint",
-    "test": "ng test"
+    "build": "ng build ui",
+    "watch": "ng build ui --watch --configuration development",
+    "lint": "ng lint"
   },
   "private": true,
-  "dependencies": {
-    "@angular/animations": "15.2.8",
+  "peerDependencies": {
     "@angular/common": "15.2.8",
-    "@angular/compiler": "15.2.8",
     "@angular/core": "15.2.8",
+    "@angular/animations": "15.2.8",
+    "@angular/compiler": "15.2.8",
     "@angular/forms": "15.2.8",
     "@angular/platform-browser": "15.2.8",
     "@angular/platform-browser-dynamic": "15.2.8",
-    "@angular/router": "15.2.8",
     "rxjs": "7.8.1",
-    "tslib": "2.5.0",
     "zone.js": "0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.2.7",
     "@angular/cli": "15.2.7",
     "@angular/compiler-cli": "15.2.8",
-    "@types/jasmine": "4.3.1",
     "eslint-config-custom": "workspace:*",
-    "jasmine-core": "4.6.0",
-    "karma": "6.4.2",
-    "karma-chrome-launcher": "3.2.0",
-    "karma-coverage": "2.2.0",
-    "karma-jasmine": "5.1.0",
-    "karma-jasmine-html-reporter": "2.0.0",
     "ng-packagr": "15.2.2",
     "tsconfig": "workspace:*",
     "typescript": "4.9.5"
-  }
+  },
+  "sideEffects": false
 }
