--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,9 +1,8 @@
 {
   "name": "ui-react",
   "version": "0.0.0",
-  "main": "./src/index.tsx",
-  "types": "./src/index.tsx",
-  "license": "MIT",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "scripts": {
     "lint": "eslint \"**/*.ts*\""
   },
