✏️ TYPO: Fix workflow typo

--- a/packages/ui-angular/tsconfig.json
+++ b/packages/ui-angular/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "outDir": "./dist/out-tsc",
+    // These do not work with ng-packagr at the moment.
     "paths": {
       "@/*": ["lib/*"]
     }
