--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -55,7 +55,7 @@ jobs:
         run: pnpm build
 
       - name: Publish
-        run: pnpm publish --no-git-checks --access public dist/
+        run: pnpm -r publish --no-git-checks --access public
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
