--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Set pnpm env
         run: |
           pnpm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
+        env:
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
       - name: Get pnpm store directory
         id: pnpm-cache
@@ -55,9 +57,7 @@ jobs:
         run: pnpm build
 
       - name: Publish
-        run: pnpm -r publish --no-git-checks --access public
-        env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+        run: pnpm publish --no-git-checks --access public
 
       - name: Zip build
         run: tar -czf release.tgz dist/
