--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -1,9 +1,10 @@
-name: Build ${{ env.PACKAGE }}
 on:
   pull_request:
     types: [closed]
 env:
   PACKAGE: ui-angular
+
+name: Build Package
 
 jobs:
   build:
@@ -19,6 +20,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+
+      - run: echo "Building ${{ env.PACKAGE }}"
 
       - name: Install Node
         uses: actions/setup-node@v3
