--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-react",
+  "name": "@nubebytes/ui-react",
   "version": "0.0.0",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
