--- a/apps/storybook-angular/package.json
+++ b/apps/storybook-angular/package.json
@@ -38,6 +38,6 @@
     "karma-jasmine-html-reporter": "2.0.0",
     "tsconfig": "workspace:*",
     "typescript": "4.9.5",
-    "ui-angular": "workspace:*"
+    "@nubebytes/ui-angular": "workspace:*"
   }
 }
