--- a/apps/storybook-react/package.json
+++ b/apps/storybook-react/package.json
@@ -30,7 +30,7 @@
     "prop-types": "15.8.1",
     "storybook": "7.0.7",
     "tsconfig": "workspace:*",
-    "ui-react": "workspace:*",
+    "@nubebytes/ui-react": "workspace:*",
     "vite": "4.3.3",
     "typescript": "5.0.4"
   }
