--- a/apps/storybook-angular/package.json
+++ b/apps/storybook-angular/package.json
@@ -4,11 +4,13 @@
   "scripts": {
     "ng": "ng",
     "dev": "pnpm start --configuration development",
-    "start": "ng serve --open --port 4343",
+    "start": "ng serve --open --port 5001",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run storybook-angular:storybook",
+    "build-storybook": "ng run storybook-angular:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -26,8 +28,16 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.2.7",
-    "@angular/cli": "15.2.7",
+    "@angular/cdk": "15.2.8",
+    "@angular/cli": "15.2.8",
     "@angular/compiler-cli": "15.2.8",
+    "@nubebytes/ui-angular": "workspace:*",
+    "@storybook/addon-essentials": "7.0.7",
+    "@storybook/addon-interactions": "7.0.7",
+    "@storybook/addon-links": "7.0.7",
+    "@storybook/angular": "7.0.7",
+    "@storybook/blocks": "7.0.7",
+    "@storybook/testing-library": "0.1.0",
     "@types/jasmine": "4.3.1",
     "eslint-config-custom": "workspace:*",
     "jasmine-core": "4.6.0",
@@ -36,8 +46,10 @@
     "karma-coverage": "2.2.0",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "storybook": "7.0.7",
     "tsconfig": "workspace:*",
-    "typescript": "4.9.5",
-    "@nubebytes/ui-angular": "workspace:*"
+    "typescript": "4.9.5"
   }
 }
