--- a/apps/storybook-angular/tsconfig.app.json
+++ b/apps/storybook-angular/tsconfig.app.json
@@ -5,10 +5,6 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "files": [
-    "src/main.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+  "files": ["app/src/main.ts"],
+  "include": ["app/src/**/*.d.ts"]
 }
