--- a/apps/storybook-angular/tsconfig.spec.json
+++ b/apps/storybook-angular/tsconfig.spec.json
@@ -4,5 +4,5 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec"
   },
-  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": ["app/src/**/*.spec.ts", "app/src/**/*.d.ts"]
 }
