--- a/packages/ui-angular/package.json
+++ b/packages/ui-angular/package.json
@@ -13,10 +13,11 @@
   },
   "private": false,
   "peerDependencies": {
-    "@angular/common": "^15.2.8",
-    "@angular/core": "^15.2.8",
     "@angular/animations": "^15.2.8",
+    "@angular/common": "^15.2.8",
     "@angular/compiler": "^15.2.8",
+    "@angular/core": "^15.2.8",
+    "@angular/cdk": "15.2.8",
     "@angular/forms": "^15.2.8",
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.8",
