--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,17 +1,49 @@
 {
   "name": "@nubebytes/ui-react",
   "version": "0.0.0",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "index.js",
+  "typings": "index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
-    "lint": "eslint \"**/*.ts*\""
+    "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prettier": "prettier --write ./src",
+    "build:cjs": "swc ./src -d ./dist --only ./src/**/*.ts --config-file .swcrc",
+    "build:dts": "tsc --declaration --declarationMap --emitDeclarationOnly && tsc-alias",
+    "build": "pnpm build:cjs && pnpm build:dts",
+    "release": "pnpm publish dist --no-git-checks --access=public"
+  },
+  "peerDependencies": {
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@material-tailwind/react": "2.1.4",
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.96",
+    "@types/node": "20.9.0",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@vitejs/plugin-react-swc": "3.4.1",
+    "copyfiles": "2.4.1",
     "eslint-config-custom": "workspace:*",
-    "react": "18.2.0",
+    "tsc-alias": "1.8.8",
     "tsconfig": "workspace:*",
-    "typescript": "5.0.4"
+    "typescript": "5.2.2",
+    "vite": "4.5.0",
+    "vite-plugin-checker": "0.6.2",
+    "vite-tsconfig-paths": "4.2.1"
+  },
+  "dependencies": {
+    "@tldraw/tldraw": "2.0.0-alpha.17",
+    "jotai": "2.5.1",
+    "lucide-react": "0.292.0",
+    "react-hook-form": "7.48.2",
+    "react-hotkeys-hook": "4.4.1",
+    "tailwind-merge": "2.0.0",
+    "use-debounce": "10.0.0",
+    "usehooks-ts": "2.9.1"
   }
 }
