--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "turbo dev",
+    "dev": "turbo run dev --parallel",
+    "dev:react": "turbo run dev --filter=storybook-react...",
+    "dev:angular": "turbo run dev --filter=*angular",
     "build": "turbo build",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "storybook": "turbo storybook"
+    "format": "turbo run format",
+    "storybook": "turbo storybook",
+    "prerelease": "turbo prerelease --filter=@nubebytes/ui-*",
+    "release": "changeset version",
+    "postrelease": "changeset publish",
+    "change": "changeset"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
-    "turbo": "1.9.3",
-    "eslint": "8.39.0",
-    "prettier": "2.8.8"
+    "turbo": "1.10.16",
+    "eslint": "8.52.0",
+    "prettier": "3.0.3",
+    "@changesets/cli": "2.26.2"
   },
   "packageManager": "pnpm@7.15.0"
 }
