Update angular projects

--- a/apps/storybook-angular/angular.json
+++ b/apps/storybook-angular/angular.json
@@ -111,6 +111,9 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@angular-eslint/schematics"]
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ],
+    "analytics": false
   }
 }
