--- a/apps/storybook-angular/package.json
+++ b/apps/storybook-angular/package.json
@@ -1,5 +1,6 @@
 {
   "name": "storybook-angular",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,44 +13,43 @@
     "storybook": "ng run storybook-angular:storybook",
     "build-storybook": "ng run storybook-angular:build-storybook"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "15.2.8",
-    "@angular/common": "15.2.8",
-    "@angular/compiler": "15.2.8",
-    "@angular/core": "15.2.8",
-    "@angular/forms": "15.2.8",
-    "@angular/platform-browser": "15.2.8",
-    "@angular/platform-browser-dynamic": "15.2.8",
-    "@angular/router": "15.2.8",
+    "@angular/animations": "16.2.11",
+    "@angular/common": "16.2.11",
+    "@angular/compiler": "16.2.11",
+    "@angular/core": "16.2.11",
+    "@angular/forms": "16.2.11",
+    "@angular/platform-browser": "16.2.11",
+    "@angular/platform-browser-dynamic": "16.2.11",
+    "@angular/router": "16.2.11",
     "rxjs": "7.8.1",
-    "tslib": "2.5.0",
-    "zone.js": "0.13.0"
+    "tslib": "2.6.2",
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.7",
-    "@angular/cdk": "15.2.8",
-    "@angular/cli": "15.2.8",
-    "@angular/compiler-cli": "15.2.8",
+    "@angular-devkit/build-angular": "16.2.8",
+    "@angular/cdk": "16.2.10",
+    "@angular/cli": "16.2.8",
+    "@angular/compiler-cli": "16.2.11",
     "@nubebytes/ui-angular": "workspace:*",
-    "@storybook/addon-essentials": "7.0.7",
-    "@storybook/addon-interactions": "7.0.7",
-    "@storybook/addon-links": "7.0.7",
-    "@storybook/angular": "7.0.7",
-    "@storybook/blocks": "7.0.7",
-    "@storybook/testing-library": "0.1.0",
-    "@types/jasmine": "4.3.1",
+    "@storybook/addon-essentials": "7.5.2",
+    "@storybook/addon-interactions": "7.5.2",
+    "@storybook/addon-links": "7.5.2",
+    "@storybook/angular": "7.5.2",
+    "@storybook/blocks": "7.5.2",
+    "@storybook/testing-library": "0.2.2",
+    "@types/jasmine": "5.1.1",
     "eslint-config-custom": "workspace:*",
-    "jasmine-core": "4.6.0",
+    "jasmine-core": "5.1.1",
     "karma": "6.4.2",
     "karma-chrome-launcher": "3.2.0",
-    "karma-coverage": "2.2.0",
+    "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
-    "karma-jasmine-html-reporter": "2.0.0",
+    "karma-jasmine-html-reporter": "2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "storybook": "7.0.7",
+    "storybook": "7.5.2",
     "tsconfig": "workspace:*",
-    "typescript": "4.9.5"
+    "typescript": "~5.1.6"
   }
 }
