--- a/packages/ui-angular/package.json
+++ b/packages/ui-angular/package.json
@@ -1,37 +1,39 @@
 {
   "name": "@nubebytes/ui-angular",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "main": "dist/esm2020/public-api.mjs",
   "module": "dist/esm2020/public-api.mjs",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  },
   "scripts": {
     "ng": "ng",
     "build": "ng build ui",
     "watch": "ng build ui --watch --configuration development",
-    "lint": "ng lint",
-    "release": "pnpm publish dist --no-git-checks --access=public"
+    "lint": "ng lint ui"
   },
-  "private": false,
   "peerDependencies": {
-    "@angular/animations": "^15.2.8",
-    "@angular/common": "^15.2.8",
-    "@angular/compiler": "^15.2.8",
-    "@angular/core": "^15.2.8",
-    "@angular/cdk": "15.2.8",
-    "@angular/forms": "^15.2.8",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
-    "rxjs": "^7.8.1",
-    "zone.js": "^0.13.0"
+    "@angular/animations": "16.2.11",
+    "@angular/common": "16.2.11",
+    "@angular/compiler": "16.2.11",
+    "@angular/core": "16.2.11",
+    "@angular/cdk": "16.2.10",
+    "@angular/forms": "16.2.11",
+    "@angular/platform-browser": "16.2.11",
+    "@angular/platform-browser-dynamic": "16.2.11",
+    "rxjs": "7.8.1",
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.7",
-    "@angular/cli": "15.2.7",
-    "@angular/compiler-cli": "15.2.8",
+    "@angular-devkit/build-angular": "16.2.8",
+    "@angular/cli": "16.2.8",
+    "@angular/compiler-cli": "16.2.11",
     "eslint-config-custom": "workspace:*",
-    "ng-packagr": "15.2.2",
+    "ng-packagr": "16.2.3",
     "tsconfig": "workspace:*",
-    "typescript": "4.9.5"
+    "typescript": "~5.1.6"
   },
   "sideEffects": false
 }
