(Imp) Angular/Demo: Add variable examples and onmount call to test everything

--- a/apps/storybook-angular/package.json
+++ b/apps/storybook-angular/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "16.2.11",
     "@angular/platform-browser-dynamic": "16.2.11",
     "@angular/router": "16.2.11",
+    "@ngneat/falso": "7.1.1",
     "@nubebytes/ui-angular": "workspace:*",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
