--- a/apps/storybook-angular/tsconfig.json
+++ b/apps/storybook-angular/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "./app/dist/out-tsc",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "strictPropertyInitialization": false
   },
   "exclude": ["dist", "build", "node_modules"]
 }
