(Imp) Angular/UI: Move editor styles to inside component and make css shadowdom to avoid conflictions

--- a/apps/storybook-angular/angular.json
+++ b/apps/storybook-angular/angular.json
@@ -24,10 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["app/src/favicon.ico", "app/src/assets"],
-            "styles": [
-              "app/src/styles.scss",
-              "./node_modules/@nubebytes/ui-angular/assets/styles.css"
-            ],
+            "styles": ["app/src/styles.scss"],
             "scripts": [],
             "allowedCommonJsDependencies": []
           },
