(Deps) Angular/UI: Change peerdeps

--- a/packages/ui-angular/package.json
+++ b/packages/ui-angular/package.json
@@ -18,26 +18,26 @@
     "lint": "ng lint ui"
   },
   "peerDependencies": {
-    "@angular/animations": "^16.2.11",
-    "@angular/cdk": "^16.2.10",
-    "@angular/common": "^16.2.11",
-    "@angular/compiler": "^16.2.11",
-    "@angular/core": "^16.2.11",
-    "@angular/forms": "^16.2.11",
-    "@angular/platform-browser": "^16.2.11",
-    "@angular/platform-browser-dynamic": "^16.2.11",
+    "@angular/animations": "^16",
+    "@angular/cdk": "^16",
+    "@angular/common": "^16",
+    "@angular/compiler": "^16",
+    "@angular/core": "^16",
+    "@angular/forms": "^16",
+    "@angular/platform-browser": "^16",
+    "@angular/platform-browser-dynamic": "^16",
     "rxjs": "7.8.1",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.8",
-    "@angular/cli": "16.2.8",
-    "@angular/compiler-cli": "16.2.11",
+    "@angular-devkit/build-angular": "^16",
+    "@angular/cli": "^16",
+    "@angular/compiler-cli": "^16",
     "@tldraw/tldraw": "2.0.0-alpha.18",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
     "eslint-config-custom": "workspace:*",
-    "ng-packagr": "16.2.3",
+    "ng-packagr": "^16",
     "sass": "1.69.5",
     "tsconfig": "workspace:*",
     "typescript": "~5.1.6",
